# ECE6960_Heterogeneous_Programming

./: README.md
assignment_1/: CMakeLists.txt  README.md
assignment_1/cmake/: benchmark.cmake
assignment_1/src/: main.cpp  matrix.hpp  threadpool.hpp
assignment_2/: CMakeLists.txt  README.md
assignment_2/cmake/: benchmark.cmake
assignment_2/src/: main.cpp  parallel_library.hpp
